--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "zod": "^3.23.8"
   },
   "type": "module"
 }
